syntax = "proto3";

package org.ostelco.analytics.api;

option java_multiple_files = true;
option java_package = "org.ostelco.prime.analytics.api";

import "google/protobuf/timestamp.proto";

// This is used to report Analytics events from OCSgw to Prime

service OcsgwAnalyticsService {
    rpc OcsgwAnalyticsEvent (stream OcsgwAnalyticsReport) returns (OcsgwAnalyticsReply) {}
}

message OcsgwAnalyticsReport {
    uint32 activeSessions = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message OcsgwAnalyticsReply {
}